--- a/config/autoexec.cfg
+++ b/config/autoexec.cfg
@@ -1,16 +1,6 @@
 // Generic
 developer "0"
 
-// Net Graph
-net_graph "0"
-net_graphpos "2"
-net_scale "5"
-
-// Packet Rates
-cl_updaterate "100"
-cl_cmdrate "100"
-rate "35000"
-
 // Display
 default_fov "130"
 gl_vsync "0"
@@ -21,3 +11,7 @@ fps_modem "60"
 // HUD
 hud_draw "1"
 hid_centerid "0"
+
+//Keybinds
+bind "," "changeclass"
+bind "." "changeteam"
